[package]
name = "car-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.17.1", features = ["full", "id"] }
env_logger = "0.11.3"
figment = { version = "0.10.18", features = ["yaml"] }
futures = "0.3.30"
mac_address = { version = "1.1.6", features = ["serde"] }
serde = { version = "1.0.199", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
